# CUtils

./: .gitignore  CMakeLists.txt
include/CUtils/: CUtils.h  hashmap.h  logger.h  main.c  queue.h
lib/xxHash/cmake_unofficial/: CMakeLists.txt
lib/xxHash/lib/: cmake_install.cmake
src/: hashmap.c  logger.c  main.c  queue.c
